fixed overflow errors -_-

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   scrollbar-track-color: black;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .container {
