--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Montserrat-VariableFont_wght';
   max-width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 @font-face {
